# NaoQNN

./: CITATION.cff  LICENSE  README.md  pyproject.toml
ball_model_experiments/: .gitignore  ball_model.py  balls_split.yml  calculate_metrics.py  generate_asm.py  inference_test.py  plot_ball_detections.py  prepare_dataset.py  requirements.txt  train_ball_model.py  training_utils.py
ball_model_experiments/.devcontainer/: Dockerfile  devcontainer.json
ball_model_experiments/test_models/: export_models.py  measure_speed.cpp
naoqnn/: __init__.py  layers.py
naoqnn/generate_asm/: __init__.py  conv.py  conv_spatial.py  copy.py  dense.py  input_conv.py  input_dense.py  input_stridedconv.py  output_argmax.py  output_scale.py  pool.py  state.py
